--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ git:
 dist: xenial
 env:
     - TEST_GROUP=magento_latest
-    - TEST_GROUP=magento_242
+    - TEST_GROUP=magento_241
 jobs:
     exclude:
         -   php: 8.1
-            env: TEST_GROUP=magento_242
+            env: TEST_GROUP=magento_241
         -   php: 7.4
             env: TEST_GROUP=magento_latest
 
@@ -41,7 +41,8 @@ script:
     - composer run test-static-analysis
     - composer run test:unit
     # Install magento
-    - if [[ $TEST_GROUP = magento_242 ]];     then NAME=ampmodule FULL_INSTALL=0 VERSION=2.4.2    . ./vendor/bin/travis-install-magento.sh; fi
+    - if [[ $TEST_GROUP = magento_241 ]];     then composer self-update --1; fi
+    - if [[ $TEST_GROUP = magento_241 ]];     then NAME=ampmodule FULL_INSTALL=0 VERSION=2.4.1    . ./vendor/bin/travis-install-magento.sh; fi
     - if [[ $TEST_GROUP = magento_latest ]];  then NAME=ampmodule FULL_INSTALL=0                  . ./vendor/bin/travis-install-magento.sh; fi
     # Install this module
     - cd vendor/ampersand/travis-vanilla-magento/instances/ampmodule
