--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
     # Ensure magento composer installer is creating the di.xml file as necessary
     - vendor/bin/mtest 'test -f app/etc/di.xml_ampersand_magento2_verbose_log_request/di.xml'
     # Integration tests
-    - vendor/bin/mtest "vendor/bin/phpunit -c /var/www/html/dev/tests/integration/phpunit.xml.dist --testsuite Integration --filter AccountController --debug"
+    - vendor/bin/mtest "vendor/bin/phpunit -c /var/www/html/dev/tests/integration/phpunit.xml.dist --testsuite Integration --debug"
 
 after_failure:
   - vendor/bin/mtest 'cat /var/www/html/var/log/*.log'
